firstShader Up&Down

--- a/MyFirstOpenGL/MyFirstOpenGL.vcxproj
+++ b/MyFirstOpenGL/MyFirstOpenGL.vcxproj
@@ -136,9 +136,9 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MyFirstFragmentShader.glsl" />
+    <None Include="UpYellowDownOrange.glsl" />
     <None Include="MyFirstGeometryShader.glsl" />
-    <None Include="MyFirstVertexShader.glsl" />
+    <None Include="UpAndDownMovement.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
