--- a/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
+++ b/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
@@ -32,13 +32,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="MyFirstVertexShader.glsl">
+    <None Include="UpAndDownMovement.glsl">
       <Filter>Shaders\Vertex Shader</Filter>
     </None>
     <None Include="MyFirstGeometryShader.glsl">
       <Filter>Shaders\Geometry Shader</Filter>
     </None>
-    <None Include="MyFirstFragmentShader.glsl">
+    <None Include="UpYellowDownOrange.glsl">
       <Filter>Shaders\Fragment Shader</Filter>
     </None>
   </ItemGroup>
