events done, but not tested

--- a/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
+++ b/MyFirstOpenGL/MyFirstOpenGL.vcxproj.filters
@@ -32,7 +32,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="UpAndDownMovement.glsl">
+    <None Include="NormalVertexShader.glsl">
       <Filter>Shaders\Vertex Shader</Filter>
     </None>
     <None Include="YRotation.glsl">
