--- a/MyFirstOpenGL/MyFirstOpenGL.vcxproj
+++ b/MyFirstOpenGL/MyFirstOpenGL.vcxproj
@@ -138,7 +138,7 @@
   <ItemGroup>
     <None Include="UpYellowDownOrange.glsl" />
     <None Include="YRotation.glsl" />
-    <None Include="UpAndDownMovement.glsl" />
+    <None Include="NormalVertexShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
